--- a/client/app/app.layout.html
+++ b/client/app/app.layout.html
@@ -1,33 +1,29 @@
 <head>
-  <title>workflow-routing</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iDiagram</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
 <template name="mainLayout">
-  <div id="mainLayout">
-    <header>
-      {{> yield region='header' }}
-    </header>
-      <aside>
-          {{> yield region='west' }}
-      </aside>
-    <aside>
-      {{> yield region='east' }}
-    </aside>
-    <main id="mainPanel">
-      {{> yield }}
-    </main>
-    <footer>
-      {{> yield region='footer' }}
-    </footer>
-  </div>
+    <div id="mainLayout">
+        <header>
+            {{> yield region='header' }}
+        </header>
+        <aside>
+            {{> yield region='west' }}
+        </aside>
+        <aside>
+            {{> yield region='east' }}
+        </aside>
+        <main id="mainPanel">
+            {{> yield }}
+        </main>
+        <footer>
+            {{> yield region='footer' }}
+        </footer>
+    </div>
 </template>
-
-<head>
-    <title>Panel Layout</title>
-</head>
 
 <template name="westPanel">
     <aside id="westPanel" class="ui sidebar with-navbar-offset">
