--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -52,7 +52,7 @@
                                 {{/if}}
                             </ul>
                         </li>
-                        <li><a href="http://github.com/awatson1978/workflow-routing">Get the code.</a></li>
+                        <li><a href="/sequenceDiagram">test</a></li>
                         <li><a id="keybindingsLink" href="#">Keybindings</a></li>
                         <li><a id="promptLink" href="#">Prompt</a></li>
                         <li><a id="confirmLink" href="#">Confirm</a></li>
