added list page

--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -15,7 +15,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">Site Name</a>
+                    <a class="navbar-brand" href="/">iDiagram</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,11 +52,8 @@
                                 {{/if}}
                             </ul>
                         </li>
-                        <li><a href="/sequenceDiagram">test</a></li>
-                        <li><a id="keybindingsLink" href="#">Keybindings</a></li>
-                        <li><a id="promptLink" href="#">Prompt</a></li>
-                        <li><a id="confirmLink" href="#">Confirm</a></li>
-                        <li><a id="errorToggleLink" href="#">Error</a></li>
+                        <li><a href="/diagram">test</a></li>
+                        <li><a href="/diagrams">list</a></li>
                         <li><a id="westPanelToggleLink" href="#">West</a></li>
                         <li><a id="eastPanelToggleLink" href="#">East</a></li>
                     </ul>
