added link from list to detail page

--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -52,8 +52,7 @@
                                 {{/if}}
                             </ul>
                         </li>
-                        <li><a href="/diagram">test</a></li>
-                        <li><a href="/diagrams">list</a></li>
+                        <li><a href="/diagrams">Diagrams</a></li>
                         <li><a id="westPanelToggleLink" href="#">West</a></li>
                         <li><a id="eastPanelToggleLink" href="#">East</a></li>
                     </ul>
