added create, and list

--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -52,7 +52,8 @@
                                 {{/if}}
                             </ul>
                         </li>
-                        <li><a href="/diagrams">Diagrams</a></li>
+                        <li><a href="/diagram/add">Create Diagram</a></li>
+                        <li><a href="/diagrams">Search Diagrams</a></li>
                         <li><a id="westPanelToggleLink" href="#">West</a></li>
                         <li><a id="eastPanelToggleLink" href="#">East</a></li>
                     </ul>
