fix sign-in page centering

--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -39,7 +39,7 @@
                     {{else}}
                         <div class="navbar-right">
                             <a href="/sign-in" class="btn btn-default navbar-btn">Sign in</a>
-                            <a href="/sign-up" class="btn btn-primary navbar-btn">Register</a>
+                            <a href="/sign-up" class="btn btn-success navbar-btn">Register</a>
                         </div>
                     {{/if}}
 
