add view only, cheat sheet, bootstrap

--- a/client/app/westPanel.html
+++ b/client/app/westPanel.html
@@ -1,10 +1,7 @@
 <template name="westPanel">
     <aside id="westPanel" class="ui sidebar with-navbar-offset">
         <div class="padded">
-            <a id="westPanelButtonA" href="#" class="fullwidth btn btn-info">west panel button A</a>
-        </div>
-        <div class="padded">
-            <a id="westPanelButtonB" href="#" class="fullwidth btn btn-info">west panel button B</a>
+            {{> cheatSheet}}
         </div>
     </aside>
 </template>
