--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -30,7 +30,6 @@
                                     <li><a href="/eula">End User License</a></li>
                                     <li><a href="/privacy">Privacy Page</a></li>
                                     <li><a href="/about">About</a></li>
-                                    <li><a href="/glossary">Glossary</a></li>
                                     <li class="divider"></li>
                                     <li><a href="/sign-out" data-action="logout"><i class="fa fa-lock"></i> Sign Out</a></li>
                                 </ul>
@@ -69,7 +68,9 @@
                                 <li><a href="/eula">End User License</a></li>
                                 <li><a href="/privacy">Privacy Page</a></li>
                                 <li><a href="/about">About</a></li>
-                                <li><a href="/glossary">Glossary</a></li>
+                                {{#if isAdmin}}
+                                    <li><a href="/examples">Examples</a></li>
+                                {{/if}}
                                 {{#if isLoggedIn }}
                                     <li class="divider"></li>
                                     <li><a href="/sign-out">Sign-Out</a></li>
@@ -81,6 +82,7 @@
                         <li><a href="/diagrams">Search</a></li>
                         <li><a id="westPanelToggleLink" href="#">West</a></li>
                         <li><a id="eastPanelToggleLink" href="#">East</a></li>
+                        <li><a href="/examples">Examples</a></li>
                     </ul>
 
                 </div>
