--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -1,8 +1,3 @@
-<!-- ============================================================================== -->
-<!-- just the navigation bar at the top of the application -->
-<!-- http://getbootstrap.com/components/#navbar -->
-
-
 <template name="navbarHeader">
     <div id="navbarHeader">
         <nav id="navbarHeaderNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -82,7 +77,7 @@
                         <li><a href="/diagrams">Search</a></li>
                         <li><a id="westPanelToggleLink" href="#">West</a></li>
                         <li><a id="eastPanelToggleLink" href="#">East</a></li>
-                        <li><a href="/examples">Examples</a></li>
+                        {{#if isAdmin}}<li><a href="/examples">Examples</a></li>{{/if}}
                     </ul>
 
                 </div>
