--- a/client/app/panels/eastPanel.html
+++ b/client/app/panels/eastPanel.html
@@ -1,5 +1,6 @@
 <template name="eastPanel">
     <aside id="eastPanel" class="padded ui right sidebar with-navbar-offset">
+        <a id="eastRightArrowBtnID" href="#"><i class="fa fa-arrow-right fa-2x"></i></a>
         <div id="eastPanelInfo" class="panel panel-info">
             <div class="panel-heading">
                 east panel info!
