--- a/client/app/panels/westPanel.html
+++ b/client/app/panels/westPanel.html
@@ -1,6 +1,7 @@
 <template name="westPanel">
     <aside id="westPanel" class="ui sidebar with-navbar-offset">
-        <div class="padded">
+        <a id="westLeftArrowBtnID" href="#"><i class="fa fa-arrow-left fa-2x"></i></a>
+        <div class="padded-2">
             {{> cheatSheet}}
         </div>
     </aside>
