--- a/client/app/panels/topPanel.html
+++ b/client/app/panels/topPanel.html
@@ -1,6 +1,8 @@
 <template name="topPanel">
     <div id="topPanel">
         <a id="westRightArrowBtnID" href="#"><i class="fa fa-arrow-right fa-2x"></i></a>
-        <a id="eastLeftArrowBtnID" href="#"><i class="fa fa-arrow-left fa-2x"></i></a>
+        {{#if enableEastPanel}}
+            <a id="eastLeftArrowBtnID" href="#"><i class="fa fa-arrow-left fa-2x"></i></a>
+        {{/if}}
     </div>
 </template>
