--- a/client/app/panels/westPanel.html
+++ b/client/app/panels/westPanel.html
@@ -1,6 +1,6 @@
 <template name="westPanel">
     <aside id="westPanel" class="ui sidebar with-navbar-offset">
-        <a id="westLeftArrowBtnID" href="#"><i class="fa fa-arrow-left fa-2x"></i></a>
+        <a id="westLeftArrowBtnID" href="#"><i class="fa fa-chevron-circle-left fa-2x"></i></a>
         <div class="padded-2">
             {{> cheatSheet}}
         </div>
