--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -25,6 +25,7 @@
                                     <li><a href="/eula">End User License</a></li>
                                     <li><a href="/privacy">Privacy Page</a></li>
                                     <li><a href="/about">About</a></li>
+                                    <li><a href="/feedback">Feedback</a></li>
                                     <li class="divider"></li>
                                     <li><a href="/sign-out" data-action="logout"><i class="fa fa-lock"></i> Sign Out</a></li>
                                 </ul>
@@ -63,9 +64,7 @@
                                 <li><a href="/eula">End User License</a></li>
                                 <li><a href="/privacy">Privacy Page</a></li>
                                 <li><a href="/about">About</a></li>
-                                {{#if isAdmin}}
-                                    <li><a href="/examples">Examples</a></li>
-                                {{/if}}
+                                <li><a href="/feedback">Feedback</a></li>
                                 {{#if isLoggedIn }}
                                     <li class="divider"></li>
                                     <li><a href="/sign-out">Sign-Out</a></li>
