--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -41,7 +41,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/diagram/add">Create</a></li>
                         <li><a href="/diagrams">Search</a></li>
-                        {{#if isAdmin}}<li><a href="/examples">Examples</a></li>{{/if}}
+                        <li><a href="/examples">Examples</a></li>
                     </ul>
 
                 </div>
