--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -41,6 +41,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/diagram/add">Create</a></li>
                         <li><a href="/diagrams">Search</a></li>
+                        <li><a href="/historys">History</a></li>
                     </ul>
 
                 </div>
