--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -39,8 +39,8 @@
                     {{/if}}
 
                     <ul class="nav navbar-nav">
-                        <li><a href="/diagram/add">Create</a></li>
-                        <li><a href="/diagrams">Search</a></li>
+                        <li><a href="/diagram/add"><i class="fa fa-plus-circle"></i> Create</a></li>
+                        <li><a href="/diagrams"><i class="fa fa-search"></i> Search</a></li>
                     </ul>
 
                 </div>
