--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -41,6 +41,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/diagram/add"><i class="fa fa-plus-circle"></i> Create</a></li>
                         <li><a href="/diagrams"><i class="fa fa-search"></i> Search</a></li>
+                        <li><a href="/tags"><i class="fa fa-tags"></i> Tags</a></li>
                     </ul>
 
                 </div>
