--- a/client/app/app.layout.html
+++ b/client/app/app.layout.html
@@ -1,4 +1,7 @@
 <template name="mainLayout">
+    <!--[if lt IE 9]>
+    <p class="browser-warning"><strong><i class="icon-exclamation-sign"></i> Warning</strong> - You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to properly view this website.</p>
+  <![endif]-->
     <div id="mainLayout">
         <header>
             {{> yield region='header' }}
