--- a/client/app/panels/topPanel.html
+++ b/client/app/panels/topPanel.html
@@ -1,8 +1,10 @@
 <template name="topPanel">
     <div id="topPanel">
+    {{#unless hideWest}}
         <a id="westRightArrowBtnID" href="#"><i class="fa fa-chevron-circle-right fa-2x"></i></a>
-        {{#if enableEastPanel}}
-            <a id="eastLeftArrowBtnID" href="#"><i class="fa fa-chevron-circle-left fa-2x"></i></a>
-        {{/if}}
+    {{/unless}}
+    {{#unless hideEast}}
+        <a id="eastLeftArrowBtnID" href="#"><i class="fa fa-chevron-circle-left fa-2x"></i></a>
+    {{/unless}}
     </div>
 </template>
