--- a/client/app/panels/westPanel.html
+++ b/client/app/panels/westPanel.html
@@ -2,7 +2,19 @@
     <aside id="westPanel" class="ui sidebar with-navbar-offset">
         <a id="westLeftArrowBtnID" href="#"><i class="fa fa-chevron-circle-left fa-2x"></i></a>
         <div class="padded-2">
-            {{> cheatSheet}}
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <select id="westPanelID" class="form-control" style="width: 80%">
+                        <option value="cheatSheet">Cheat Sheet</option>
+                        <!--<option value="tagsPanel">Tags</option>-->
+                    </select>
+                </div>
+                <div class="panel-body">
+
+                    {{> Template.dynamic template=templateName}}
+
+                </div>
+            </div>
         </div>
     </aside>
 </template>
