--- a/client/app/navbars/navbarHeader.html
+++ b/client/app/navbars/navbarHeader.html
@@ -38,6 +38,7 @@
                     {{/if}}
 
                     <ul class="nav navbar-nav">
+                        <li><a id="navID" href="#" title="Toggle nav toolbar"><i class="fa fa-bars"></i></a> </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-plus-circle"></i> Create <i class="fa fa-caret-down"></i>
