--- a/client/app/panels/eastPanel.html
+++ b/client/app/panels/eastPanel.html
@@ -3,7 +3,7 @@
         <a id="eastRightArrowBtnID" href="#" style="margin-top: -10px"><i class="fa fa-chevron-circle-right fa-2x"></i></a>
         <div id="eastPanelInfo" class="panel panel-info">
             <div class="panel-heading">
-                <div class="text-center">
+                <div class="text-center bg-info">
                     {{#if isFilterable}}
                         {{#if isFiltered}}Filtered{{else}}All{{/if}} History
                         <a id="historyFilterID" class="pull-right active" style="margin-top: -5px" href="" title="toggle filter by diagram">
